test/error/freevar.stg
-- undefiend var
main = THUNK(a);

